--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -434,14 +434,14 @@ details > summary {
   padding: 10px;
   border-radius: 5px;
   position: relative;
-  list-style-type: none;
+  list-style-type: none;  /* Remove the bullet points */
   display: flex;
   justify-content: space-between;
   align-items: center;
-  user-select: none; /* Prevents text selection */
-  padding-right: 40px; /* Create space for the icon on the right */
+  user-select: none;
+  padding-right: 40px;
+  text-align: left; /* Ensure text is aligned to the left */
   flex-wrap: wrap; /* Allow text to wrap */
-  text-align: start;
 }
 
 details > summary::marker {
